Bug 284676 - Dragging messages to collapsed folder with subfolders will expand subfolders even after releasing the mouse button
Summary: Dragging messages to collapsed folder with subfolders will expand subfolders ...
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: folders (other bugs)
Version First Reported In: 4.7
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-10-22 08:31 UTC by Gunter Ohrner
Modified: 2011-10-24 08:21 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.7.3
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Gunter Ohrner 2011-10-22 08:31:01 UTC
Version:           4.7 (using KDE 4.7.2) 
OS:                Linux

Finally kmail expands collapsed folders with subfolders again while hovering above them with dragged messages, great!

Unfortunately, the folder will also expand after the mouse button has already been released and the drop action menu shows. This is annoying as once I release the mouse button I have already found the correct drop target, so kmail does not need to present any additonal ones. The drop target folder always has to be collapsed manually after DnD.

Reproducible: Always

Steps to Reproduce:
Drag messages to a collapsed folder with subfolders. Release the mouse button just after reaching the target folder.

Actual Results:  
The drop action popup menu (Copy, Move, Cancel) will appear and shortly thereafter the target folder will expand, showing its subfolders.

Expected Results:  
The target folder should not expand if the mouse button has already been released and the drop action popup menu is displayed.
Comment 1 Laurent Montel 2011-10-24 08:21:20 UTC
Git commit aec38d9041d15bd9aef0754da812a5d22746d2e8 by Montel Laurent.
Committed on 24/10/2011 at 10:20.
Pushed by mlaurent into branch 'master'.

Fix Bug 284676 - Dragging messages to collapsed folder with subfolders will expand subfolders even after releasing the mouse button

FIXED-IN: 4.7.3
BUG: 284676

M  +1    -2    akonadi/entitytreeview.cpp

http://commits.kde.org/kdepimlibs/aec38d9041d15bd9aef0754da812a5d22746d2e8
Comment 2 Laurent Montel 2011-10-24 08:21:58 UTC
Git commit c9231e57189634ef78ef834015c776a5de8f8385 by Montel Laurent.
Committed on 24/10/2011 at 10:20.
Pushed by mlaurent into branch 'KDE/4.7'.

Fix Bug 284676 - Dragging messages to collapsed folder with subfolders will expand subfolders even after releasing the mouse button

FIXED-IN: 4.7.3
BUG: 284676
(cherry picked from commit aec38d9041d15bd9aef0754da812a5d22746d2e8)

M  +1    -2    akonadi/entitytreeview.cpp

http://commits.kde.org/kdepimlibs/c9231e57189634ef78ef834015c776a5de8f8385