Fix Bug 284676 - Dragging messages to collapsed folder with subfolders will expand subfolders even after releasing the mouse button

FIXED-IN: 4.7.3
BUG: 284676